✨ Added new brand color and removed themeservice overload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
   <app-nav></app-nav>
   
   <app-terminal></app-terminal>
+
+  <div *ngFor="let project of projects">{{project.name}}</div>
+  
+  <app-back-to-top></app-back-to-top>
 </div>
