--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -1,4 +1,4 @@
-<div class="terminal-container theme-{{themeService.getTheme()}}">
+<div class="terminal-container">
     <div id="termynal" data-termynal data-ty-typeDelay="40" data-ty-lineDelay="700">
       <span data-ty="input" data-ty-prompt="▲">yarn add @dsgdsr/about-me@latest</span>
       <span data-ty>#TODO about</span>
@@ -13,6 +13,7 @@
       <span data-ty data-ty-delay="0">Profiles found: [</span>
         <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'github', url: '<a target="_blank" href="https://github.com/dsgdsr">https://github.com/dsgdsr</a>' {{ '}' }},</span>
         <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'linkedin', url: '<a target="_blank" href="https://github.com/dsgdsr">https://linkd.in/dsgdsr</a>' {{ '}' }},</span>
+        <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'codepen', url: '<a target="_blank" href="https://codepen.io/dsgdsr">https://codepen.io/dsgdsr</a>' {{ '}' }},</span>
       <span data-ty data-ty-delay="0">]</span>
       <!--span data-ty="input" data-ty-prompt="▲">cd ~/repos</span>
       <span data-ty="input" data-ty-prompt="▲ ~/repos"> git checkout branch master</span>
