--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,8 +1,9 @@
 :host {
   .nav {
     width: 100%;
-    padding: 30px 35px;
-    position: fixed;
+    padding: 1.8em 2.2em;
+    position: absolute;
+    color: var(--text-color);
     top: 0; left: 0;
     display: flex;
     align-items: center;
@@ -10,6 +11,7 @@
 
     .nav-logo {
       span, h1 {
+        color: var(--color-text-main);
         display: inline-block;
         font-size: 1.05em;
       }
@@ -21,7 +23,7 @@
       font-weight: 500;
       font-size: .95em;
 
-      span:not(:first-child) {
+      .nav-link:not(:first-child) {
         margin-left: 2.5em;
       }
 
@@ -29,10 +31,22 @@
         text-decoration: none;
         color: inherit;
       }
-    }
 
-    &.theme-dark {
-      color: white;
+      .nav-link {
+        cursor: pointer;
+
+        &-number {
+          font-size: 1em;
+          letter-spacing: -1px;
+          color: var(--color-text-main);
+          margin-right: .5em;
+
+          &::after {
+            content: '.';
+            margin-left: -.2em;
+          }
+        }
+      }
     }
   }
 }
