🎉 Created social icons list, all icons using feather-icons and some theming improvements

--- a/src/app/components/back-to-top/back-to-top.component.scss
+++ b/src/app/components/back-to-top/back-to-top.component.scss
@@ -13,5 +13,11 @@
     span {
       margin-right: .6em;
     }
+
+    .arrow-icon {
+      width: 16px;
+      display: flex;
+      align-items: center;
+    }
   }
 }
