--- a/src/app/components/terminal/terminal.component.html
+++ b/src/app/components/terminal/terminal.component.html
@@ -9,12 +9,13 @@
       <span data-ty="input" data-ty-prompt="▲">cat ../portfolio/projects.list</span>
       <span data-ty>['<a href="#">spotifyrics</a>', '<a href="#">pykedex</a>', '<a href="#">react-progress</a>', '<a href="#">project 4</a>']</span>
       <span data-ty="input" data-ty-prompt="▲">node</span>
-      <span data-ty="input" data-ty-prompt=">">SocialService.search('dsgdsr 🦄')</span>
-      <span data-ty data-ty-delay="0">Profiles found: [</span>
+      <span data-ty="input" data-ty-prompt=">">MailService.search('dsgdsr 🦄')</span>
+      <span data-ty>Contact mail found: <a href="mailto:contact@dsgdsr.me">contact@dsgdsr.me</a></span>
+      <!--span data-ty data-ty-delay="0">Profiles found: [</span>
         <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'github', url: '<a target="_blank" href="https://github.com/dsgdsr">https://github.com/dsgdsr</a>' {{ '}' }},</span>
         <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'linkedin', url: '<a target="_blank" href="https://github.com/dsgdsr">https://linkd.in/dsgdsr</a>' {{ '}' }},</span>
         <span data-ty data-ty-delay="0">&nbsp;&nbsp;{{ '{' }} name: 'codepen', url: '<a target="_blank" href="https://codepen.io/dsgdsr">https://codepen.io/dsgdsr</a>' {{ '}' }},</span>
-      <span data-ty data-ty-delay="0">]</span>
+      <span data-ty data-ty-delay="0">]</span-->
       <!--span data-ty="input" data-ty-prompt="▲">cd ~/repos</span>
       <span data-ty="input" data-ty-prompt="▲ ~/repos"> git checkout branch master</span>
       <span data-ty="input" data-ty-prompt="▲ ~/repos (master)">git commit -m "Fix things"</span-->
