--- a/src/app/components/theme-switcher/theme-switcher.component.scss
+++ b/src/app/components/theme-switcher/theme-switcher.component.scss
@@ -2,4 +2,10 @@
   display: flex;
   align-content: center;
   cursor: pointer;
+
+  .theme-icon {
+    width: 18px;
+    display: flex;
+    align-items: center;
+  }
 }
