--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
   <app-nav></app-nav>
   
   <app-terminal></app-terminal>
-
-  <div *ngFor="let project of projects">{{project.name}}</div>
   
+  <app-social-links></app-social-links>
   <app-back-to-top></app-back-to-top>
 </div>
