--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -34,6 +34,11 @@
 
       .nav-link {
         cursor: pointer;
+        transition: all .2s ease;
+
+        &:hover {
+          color: var(--color-text-main);
+        }
 
         &-number {
           font-size: 1em;
