--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,8 @@
     box-sizing: border-box;
     font-family: "Roboto Mono", Menlo, Monaco, "Courier New", Courier, monospace;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
