--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
 <div id="app-container" class="theme-{{themeService.getTheme()}}">
-  <app-nav></app-nav>
-  
-  <app-terminal></app-terminal>
-  
-  <app-social-links></app-social-links>
-  <app-back-to-top></app-back-to-top>
+  <router-outlet></router-outlet>
 </div>
