✨ Cleaned some dependencies and created project components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+
 <div id="app-container" class="theme-{{themeService.getTheme()}}">
+  <style>
+    html {
+      background: var(--var-color);
+    }
+  </style>
   <router-outlet></router-outlet>
 </div>
