--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,3 +1,19 @@
 <div class="featured-project">
-    
+    <div class="featured-image__container">
+        
+    </div>
+    <div class="project__container">
+        <h3 class="project__title">{{ project.name }}</h3>
+        <div class="project__body">
+            <p class="project__description">{{ project.description }}</p>
+            <div class="project__tags">
+                <span *ngFor="let tag of project.tags" ngclass="project__tag">{{ tag }}</span>
+            </div>
+        </div>
+        <div class="project__links">
+            <a *ngFor="let link of project.links" target="_blank" [href]="link.url">
+                <i-feather class="project__link" [name]="link.icon"></i-feather>
+            </a>
+        </div>
+    </div>
 </div>
