🚀 Huge improvement in bundle size and decided to avoid routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 
 <div id="app-container" class="theme-{{themeService.getTheme()}}">
-  <style>
-    html {
-      background: var(--var-color);
-    }
-  </style>
-  <router-outlet></router-outlet>
+  <app-homepage></app-homepage>
+
+  <app-social-links></app-social-links>
+  <app-back-to-top></app-back-to-top>
 </div>
