🎨 Improved some theming features and customized scrollbar

--- a/src/app/components/terminal/terminal.component.scss
+++ b/src/app/components/terminal/terminal.component.scss
@@ -27,7 +27,7 @@
     box-sizing: border-box;
     margin: 30px;
     box-shadow: var(--terminal-shadow);
-    background: var(--terminal-bg);
+    background: var(--bg-secondary-color);
 
     a {
       text-decoration: underline;
