--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,6 +1,6 @@
 :host {
     .featured-project__list {
-        margin: 0 auto;
+        margin: 3em auto;
         max-width: 92%;
         width: 980px;
     }
