--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,9 +46,29 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto Mono", Menlo, Monaco, "Courier New", Courier, monospace;
+    scroll-behavior: smooth;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
+
+body {
+    background: var(--bg-color);
+    
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        border-radius: 12px;
+        border: 4px solid transparent;
+        background-color: var(--scrollbar-bg);
+        background-clip: content-box;
+    }
+    
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 }
