🛠 Huge improvement on entire website, including new blog using markdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <div id="app-container" class="theme-{{themeService.getTheme()}}">
-  <app-homepage></app-homepage>
+  <app-nav></app-nav>
+
+  <router-outlet></router-outlet>
 
   <app-social-links></app-social-links>
   <app-back-to-top></app-back-to-top>
