--- a/src/app/components/social-links/social-links.component.html
+++ b/src/app/components/social-links/social-links.component.html
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li class="social-icon">
-      <a href="https://twitter.com/_dsgdsr" aria-label="Twitter" target="_blank" rel="noreferrer" class="social-icon-link">
+      <a href="https://twitter.com/dsgdsr_" aria-label="Twitter" target="_blank" rel="noreferrer" class="social-icon-link">
         <i-feather class="icon" name="twitter"></i-feather>
       </a>
     </li>
