--- a/src/app/components/back-to-top/back-to-top.component.html
+++ b/src/app/components/back-to-top/back-to-top.component.html
@@ -1,9 +1,11 @@
 <div class="bttop-container" (click)="scroll()">
-    <span class="{{ isAtTop ? null : 'hidden' }}">scroll</span>
-    <ng-container *ngIf="true; else elseTemplate">
+    <span class="{{ isAtTop && router.url === '/' ? null : 'hidden' }}">scroll</span>
+    <ng-container *ngIf="router.url === '/'; else elseTemplate">
         <i-feather name="arrow-down" class="arrow-icon {{ isAtTop ? null : 'scrolling' }}"></i-feather>
     </ng-container>
     <ng-template #elseTemplate>
-        
+        <span class="{{ isAtTop ? 'hidden' : null }}">
+            <i-feather name="arrow-down" class="arrow-icon scrolling"></i-feather>
+        </span>
     </ng-template>
 </div>
