📱 Some responsive tweaks

--- a/src/app/components/back-to-top/back-to-top.component.scss
+++ b/src/app/components/back-to-top/back-to-top.component.scss
@@ -10,6 +10,10 @@
     cursor: pointer;
     color: var(--text-color);
 
+    @media (max-width: 800px) {
+      display: none;
+    }
+
     .hidden {
       opacity: 0;
     }
