--- a/src/app/components/featured-project/featured-project.component.scss
+++ b/src/app/components/featured-project/featured-project.component.scss
@@ -4,18 +4,12 @@
     .featured-project {
         position: relative;
         display: flex;
-
-        &--rtl {
-            flex-direction: row-reverse;
-
-            .project__wrapper {
-                left: 0;
-            }
-        }
+        flex-direction: column;
+        align-items: center;
     }
 
     .featured-image__container {
-        width: 62%;
+        width: 100%;
 
         .project__image {
             border-radius: var(--project--b-redius);
@@ -27,13 +21,13 @@
     }
 
     .project__wrapper {
-        width: 54%;
+        width: 85%;
         height: 100%;
-        position: absolute;
         right: 0; top: 0;
         display: flex;
         justify-content: center;
         flex-direction: column;
+        margin-top: -20%;
 
         .project__container {
             border-radius: var(--project--b-redius);
@@ -61,9 +55,41 @@
             }
 
             .project__tags {
-                margin-top: 2.5em;
+                margin-top: 2em;
                 float: right;
+                text-align: right;
             }
+        }
+    }
+
+    @media (min-width: 800px) {
+        .featured-image__container {
+            width: 70%;
+        }
+
+        .project__wrapper {
+            width: 65%;
+            margin-top: -10%;
+        }
+    }
+
+    @media (min-width: 1200px) {
+        .featured-project {
+            flex-direction: row;
+
+            &--rtl {
+                flex-direction: row-reverse;
+    
+                .project__wrapper {
+                    left: 0;
+                }
+            }
+        }
+
+        .project__wrapper {
+            width: 54%;
+            position: absolute;
+            margin-top: 0;
         }
     }
 }
