--- a/src/app/components/tag-list/tag-list.component.scss
+++ b/src/app/components/tag-list/tag-list.component.scss
@@ -6,7 +6,9 @@
     .tag {
       position: relative;
       padding: .2em .5em;
-      margin-right: 0.75em;
+      margin: .75em 0 0 .75em;
+      white-space: nowrap;
+      display: inline-block;
       
       &:last-child {
         margin-right: 0;
