--- a/src/app/pages/blog/post/blog-post.component.scss
+++ b/src/app/pages/blog/post/blog-post.component.scss
@@ -8,9 +8,14 @@
 
         .blog-post__title {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            align-items: end;
+            flex-direction: column-reverse;
             margin-bottom: 2.5em;
+
+            h1 {
+                margin-top: 1em;
+                align-self: start;
+            }
         }
 
         markdown ::ng-deep {
