--- a/src/app/components/featured-project/featured-project.component.scss
+++ b/src/app/components/featured-project/featured-project.component.scss
@@ -21,7 +21,7 @@
     }
 
     .project__wrapper {
-        width: 85%;
+        width: 95%;
         height: 100%;
         right: 0; top: 0;
         display: flex;
@@ -51,14 +51,25 @@
 
             .project__description {
                 margin-top: 1.25em;
-                font-size: .75em;
+                font-size: .7em;
+                line-height: 1.5em;
             }
 
             .project__tags {
-                margin-top: 2em;
+                margin-top: 1.5em;
                 float: right;
                 text-align: right;
             }
+        }
+    }
+
+    @media (min-width: 550px) {
+        .project__description {
+            font-size: .75em;
+        }
+
+        .project__wrapper {
+            width: 85%;
         }
     }
 
