--- a/src/app/components/social-links/social-links.component.scss
+++ b/src/app/components/social-links/social-links.component.scss
@@ -2,7 +2,7 @@
   .social-links {
     width: 30px;
     position: fixed;
-    bottom: 0; left: 0;
+    bottom: 0; left: -.5em;
     margin: 0 2em;
     color: var(--text-color);
 
