--- a/src/app/components/social-links/social-links.component.scss
+++ b/src/app/components/social-links/social-links.component.scss
@@ -2,8 +2,8 @@
   .social-links {
     width: 30px;
     position: fixed;
-    bottom: 0; left: -.5em;
-    margin: 0 2em;
+    bottom: 0; left: 0em;
+    margin: 0 1.6em;
     color: var(--text-color);
 
     @media (max-width: 1000px) {
