--- a/src/app/pages/blog/list/blog-list.component.html
+++ b/src/app/pages/blog/list/blog-list.component.html
@@ -1,18 +1,18 @@
 <div class="blog-list__wrapper">
     <ng-container *ngFor="let post of posts">
         <div class="blog-list__post">
-            <a [routerLink]="['/blog', post.slug]" class="blog-list__post_title">
-                <h3>{{ post.title }}</h3>
+            <a [routerLink]="['/blog', post?.slug]" class="blog-list__post_title">
+                <h3>{{ post?.title }}</h3>
             </a>
 
-            <p class="blog-list__post_summary">{{ post.summary }}</p>
+            <p class="blog-list__post_summary">{{ post?.summary }}</p>
 
             <div class="blog-list__post_footer">
-                <a [routerLink]="['/blog', post.slug]" class="blog-list__post_footer__more">read more...</a>
+                <a [routerLink]="['/blog', post?.slug]" class="blog-list__post_footer__more">read more...</a>
             
-                <app-tag-list
+                <app-tag-list *ngIf="post?.tags"
                     [ngStyle]="{'float': 'right'}"
-                    [tags]="post.tags"
+                    [tags]="post?.tags"
                     [style]="{
                         color: 'var(--color-text-main)',
                         fontSize: '.8em'
