--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,19 +1,19 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
-        <img loading="lazy" class="project__image" [src]="project.featured_image"/>
+        <img loading="lazy" class="project__image" [src]="project?.featured_image ? project?.featured_image : project?.image_url"/>
     </div>
     <div class="project__wrapper">
         <div class="project__container">
             <h3 class="project__title">
-                {{ project.name }}
-                <a class="project__url" [href]="project.url" target="_blank">
+                {{ project?.name }}
+                <a *ngIf="project?.url" class="project__url" [href]="project?.url" target="_blank">
                     <i-feather name="external-link" class="project__url-icon"></i-feather>
                 </a>
             </h3>
             <div class="project__body">
-                <p class="project__description">{{ project.description }}</p>
+                <p class="project__description">{{ project?.description }}</p>
                 <div class="project__tags">
-                    <app-tag-list [tags]="project.tags"></app-tag-list>
+                    <app-tag-list [tags]="project?.tags"></app-tag-list>
                 </div>
             </div>
             <!--div class="project__links">
