🔗 Render project links in featured projects

--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,26 +1,40 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
-        <img loading="lazy" class="project__image" [src]="project?.featured_image ? project?.featured_image : project?.image_url"/>
+        <figure>
+            <img loading="lazy" class="project__image" [src]="project?.featured_image ? project?.featured_image : project?.image_url"/>
+        </figure>
+
+        <div class="project__links">
+            <ng-container *ngFor="let link of project.links">
+              <a [class]="'icon-' + link.icon" target="_blank" [href]="link.url">
+                  <span class="project__link">
+                      <i-feather class="project__link_icon" [name]="link.icon"></i-feather>
+                  </span>
+              </a>
+            </ng-container>
+        </div>
     </div>
+
     <div class="project__wrapper">
         <div class="project__container">
             <h3 class="project__title">
                 {{ project?.name }}
-                <a *ngIf="project?.url" class="project__url" [href]="project?.url" target="_blank">
-                    <i-feather name="external-link" class="project__url-icon"></i-feather>
-                </a>
+                <ng-container *ngTemplateOutlet="projectUrl; context:{ url: project?.url }"></ng-container>
             </h3>
+
             <div class="project__body">
                 <p class="project__description">{{ project?.description }}</p>
                 <div class="project__tags">
                     <app-tag-list [tags]="project?.tags"></app-tag-list>
                 </div>
             </div>
-            <!--div class="project__links">
-                <a *ngFor="let link of project.links" [alt]="link.icon" target="_blank" [href]="link.url">
-                    <i-feather class="project__link" [name]="link.icon"></i-feather>
-                </a>
-            </div-->
         </div>
     </div>
 </div>
+
+<ng-template #projectUrl let-url="url">
+    <a *ngIf="url" class="project__url" [href]="url" target="_blank">
+        <i-feather name="external-link" class="project__url-icon"></i-feather>
+    </a>
+</ng-template>
+
