🔐 Use blob images only

--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,7 +1,7 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
         <figure>
-            <img loading="lazy" class="project__image" [src]="project?.featured_image ? project?.featured_image : project?.image_url"/>
+            <img loading="lazy" class="project__image" [src]="project?.featured_image"/>
         </figure>
 
         <div class="project__links">
