--- a/src/app/components/featured-project/featured-project.component.scss
+++ b/src/app/components/featured-project/featured-project.component.scss
@@ -46,6 +46,16 @@
                 transition: color .2s ease;
                 padding: .6em;
 
+                &__text {
+                    clip-path: inset(100%);
+                    clip: rect(1px, 1px, 1px, 1px);
+                    height: 1px;
+                    overflow: hidden;
+                    position: absolute;
+                    white-space: nowrap;
+                    width: 1px;
+                }
+
                 &:hover {
                     color: #ff69c1;
                 }
