--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -1,16 +1,22 @@
 <div class="featured-project {{ rtl ? 'featured-project--rtl' : null }}">
     <div class="featured-image__container">
         <figure>
-            <img loading="lazy" class="project__image" [src]="project?.featured_image"/>
+            <img
+                loading="lazy"
+                class="project__image"
+                [alt]="project?.name + ' - ' + project?.description"
+                [src]="project?.featured_image"
+            />
         </figure>
 
         <div class="project__links">
             <ng-container *ngFor="let link of project?.links">
-              <a [class]="'icon-' + link.icon" target="_blank" [href]="link.url">
-                  <span class="project__link">
-                      <i-feather class="project__link_icon" [name]="link.icon"></i-feather>
-                  </span>
-              </a>
+                <a [class]="'icon-' + link.icon" target="_blank" [href]="link.url">
+                    <span class="project__link">
+                        <span class="project__link__text">{{link.icon}}</span>
+                        <i-feather class="project__link_icon" [name]="link.icon"></i-feather>
+                    </span>
+                </a>
             </ng-container>
         </div>
     </div>
