--- a/src/app/components/social-links/social-links.component.html
+++ b/src/app/components/social-links/social-links.component.html
@@ -1,22 +1,26 @@
 <div class="social-links">
   <ul class="social-icons-list">
     <li class="social-icon">
-      <a href="https://codepen.io/dsgdsr" aria-label="Codepen" target="_blank" rel="noreferrer" class="social-icon-link">
+      <a href="https://codepen.io/dsgdsr" aria-label="Codepen" target="_blank" rel="noreferrer" class="social-icon__link">
+        <span class="social-icon__link__text">Codepen</span>
         <i-feather class="icon" name="codepen"></i-feather>
       </a>
     </li>
     <li class="social-icon">
-      <a href="https://twitter.com/dsgdsr_" aria-label="Twitter" target="_blank" rel="noreferrer" class="social-icon-link">
+      <a href="https://twitter.com/dsgdsr_" aria-label="Twitter" target="_blank" rel="noreferrer" class="social-icon__link">
+        <span class="social-icon__link__text">Twiter</span>
         <i-feather class="icon" name="twitter"></i-feather>
       </a>
     </li>
     <li class="social-icon">
-      <a href="https://github.com/dsgdsr" aria-label="GitHub" target="_blank" rel="noreferrer" class="social-icon-link">
+      <a href="https://github.com/dsgdsr" aria-label="GitHub" target="_blank" rel="noreferrer" class="social-icon__link">
+        <span class="social-icon__link__text">Github</span>
         <i-feather class="icon" name="github"></i-feather>
       </a>
     </li>
     <li class="social-icon">
-      <a href="https://www.linkedin.com/in/dsgdsr" aria-label="Linkedin" target="_blank" rel="noreferrer" class="social-icon-link">
+      <a href="https://www.linkedin.com/in/dsgdsr" aria-label="Linkedin" target="_blank" rel="noreferrer" class="social-icon__link">
+        <span class="social-icon__link__text">Linkedin</span>
         <i-feather class="icon" name="linkedin"></i-feather>
       </a>
     </li>
