--- a/src/app/components/featured-project/featured-project.component.html
+++ b/src/app/components/featured-project/featured-project.component.html
@@ -5,7 +5,7 @@
                 loading="lazy"
                 class="project__image"
                 [alt]="project?.name + ' - ' + project?.description"
-                [src]="project?.featured_image"
+                [src]="project?.image_url"
             />
         </figure>
 
