--- a/src/app/pages/blog/list/blog-list.component.scss
+++ b/src/app/pages/blog/list/blog-list.component.scss
@@ -1,9 +1,9 @@
 :host {
     .blog-list__wrapper {
         margin: 0 auto;
-        padding: 9em 0 5em 0;
-        max-width: 92%;
-        width: 600px;
+        padding: 9em 2.2em 5em 2.2em;
+        max-width: 100%;
+        width: 700px;
         color: var(--text-color);
 
         .blog-list__post {
@@ -25,7 +25,8 @@
             }
             
             &_summary {
-                font-size: .85em;
+                font-size: .9em;
+                line-height: 1.5em;
                 margin-bottom: 1.75em;
             }
             
