--- a/src/app/pages/blog/post/blog-post.component.scss
+++ b/src/app/pages/blog/post/blog-post.component.scss
@@ -1,9 +1,9 @@
 :host {
     .blog-post__wrapper {
         margin: 0 auto;
-        padding: 9em 0 5em 0;
-        max-width: 92%;
-        width: 600px;
+        padding: 9em 2.2em 5em 2.2em;
+        max-width: 100%;
+        width: 700px;
         color: var(--text-color);
 
         .blog-post__title {
@@ -19,7 +19,7 @@
         }
 
         markdown ::ng-deep {
-            font-size: .85em;
+            font-size: .9em;
 
             img {
                 max-width: 100%;
