🛠 Fix project to work with SSR

--- a/src/app/pages/blog/post/blog-post.component.scss
+++ b/src/app/pages/blog/post/blog-post.component.scss
@@ -8,7 +8,7 @@
 
         .blog-post__title {
             display: flex;
-            align-items: end;
+            align-items: flex-end;
             flex-direction: column-reverse;
             margin-bottom: 2.5em;
 
