--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,24 @@ a {
     text-decoration: none;
 }
 
+body.light {
+    --bg-color: white;
+    --scrollbar-bg: #333333;
+    --bg-secondary-color: #30333e;
+    --text-color: #161618;
+    --color-text-main: #fb24a2;
+    --terminal-shadow: 0px 10px 40px #52525290;
+}
+
+body.dark {
+    --bg-color: #23252c;
+    --scrollbar-bg: #ffffff;
+    --bg-secondary-color: #323744;
+    --text-color: white;
+    --color-text-main: #ff69c1;
+    --terminal-shadow: 0px 10px 20px #00000030;
+}
+
 body {
     background: var(--bg-color);
     
