--- a/src/app/pages/blog/post/blog-post.component.html
+++ b/src/app/pages/blog/post/blog-post.component.html
@@ -1,21 +1,21 @@
 <app-progress-bar></app-progress-bar>
 
 <div class="blog-post__wrapper">
-  <div class="blog-post__title">
-    <h1>{{ post?.title }}</h1>
-    <app-tag-list
-      [tags]="post?.tags"
-      [style]="{
-        color: 'var(--color-text-main)',
-        fontSize: '.8em',
-        textAlign: 'right'
-      }"
-      backgroundColor="var(--color-text-main)"
-    ></app-tag-list>
-  </div>
+    <div class="blog-post__title">
+        <h1>{{ post?.title }}</h1>
+        <app-tag-list
+            [tags]="post?.tags"
+            [style]="{
+                color: 'var(--color-text-main)',
+                fontSize: '.8em',
+                textAlign: 'right'
+            }"
+            backgroundColor="var(--color-text-main)"
+        ></app-tag-list>
+    </div>
 
-  <markdown
-    [src]="'./../../../../assets/data/posts/' + post?.slug + '.md'"
-    emoji
-  ></markdown>
+    <markdown
+        [src]="'./../../../../assets/data/posts/' + post?.body + '.md'"
+        emoji
+    ></markdown>
 </div>
